--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@ main {
   
 }
 
+.audio-container {
+  display: flex
+  justify-content: center;
+}
+
 .button-container {
   display: flex;
   justify-content: center;
