--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 header {
-  background-color: #333;
+  background-color: #e30202;
   color: #fff;
   padding: 1rem;
   text-align: center;
