--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   justify-content: space-between;
   font-family: sans-serif;
   font-size: 1.2rem;
-  background-color: #f2f2f2;
+  background-color: #fa7070;
 }
 
 header {
